--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,8 @@
 == README
 
 Rails store application
+Rails store application
+Rails store application
+Rails store application
 
 <tt>rake doc:app</tt>.
